<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/detailsHeaderRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/iv_poster"
                    android:layout_toRightOf="@+id/iv_poster"
                    android:text="@string/tv_title" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/iv_poster"
                    android:layout_toRightOf="@+id/iv_poster"
                    android:text="@string/tv_description" />

                <TextView
                    android:id="@+id/tv_users_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/iv_poster"
                    android:layout_toRightOf="@+id/iv_poster"
                    android:text="@string/tv_users_rating" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_users_rating"
                    android:layout_toEndOf="@+id/iv_poster"
                    android:layout_toRightOf="@+id/iv_poster"
                    android:text="@string/tv_release_date" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reviewsRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailsHeaderRelativeLayout">

                <TextView
                    android:id="@+id/tv_reviews_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:text="@string/tv_reviews_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_reviews_title"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/reviewLinearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_reviews_title"
                    android:orientation="vertical">
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/videosRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reviewsRelativeLayout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_videos_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:text="@string/tv_videos_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/videoLinearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_videos_title"
                    android:orientation="vertical" />

                <ProgressBar
                    android:id="@+id/progressBar3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_videos_title"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>